# Bone-Age-Regression-from-Hand-X-Ray-Images

./: .gitignore  README.md  b.ipynb  demo.ipynb  log_book.txt  main.py  pyproject.toml  requirements-radiomics.txt  requirements.txt
.github/workflows/: tests.yml
.venvML/: pyvenv.cfg
.venvML/Scripts/: activate  activate.bat
BoneAgeRegressor/: __main__.py
BoneAgeRegressor/pipeline/: inference.py  load_birefnet.py  loader.py
data/: test.csv  validation.csv
notebook/: 00_cnn.ipynb  00_pytorch_cnn.ipynb  01_cnn_results.ipynb  02_cnn_torch.ipynb  02_resnet.ipynb  03_ML.ipynb  03_cnn_torch_results.ipynb  04_cnn_torch_male_results.ipynb  05_ML.ipynb  boneage_cnn_best.pth  modello.keras  prova.ipynb
notebook/model_results/: modello.keras  torch_model.pt  torch_model_male.pt  training_history.pkl  training_history_torch.xlsx  training_history_torch_male.xlsx
scripts/: images_rgba_to_gray_conversion.py  images_segmentation.py
src/: engine.py
src/config/: stats.json
src/model/: cnn.py  cnn_torch.py
src/pipeline/: inference.py  load_birefnet.py
src/preprocessing/: data_loader.py  datasets.py  datasets_radiomics.py  rgba_conversion.py  scaling.py  segmentation.py  transforms.py
src/utils/: dataframe_utils.py
src/visualization/: plots.py
tests/: test_dataframe_utils.py  test_dataset_radiomics.py  test_datasets.py  test_rgba_conversion.py  test_scaling.py  test_segmentation.py  tests_utils.py
tests/test_data/: test_create_dataframe.csv
